--- a/app/src/main/res/layout/content_ad__dr_ditails.xml
+++ b/app/src/main/res/layout/content_ad__dr_ditails.xml
@@ -199,7 +199,7 @@
 
     <ScrollView
         android:id="@+id/up_sc"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:overScrollMode="always"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -215,8 +215,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/up_cls"
+                android:src="@drawable/back"
+                android:layout_marginLeft="10dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp" />
         <TextView
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="30dp"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Update Form"
@@ -225,12 +231,7 @@
             android:textColor="#2897a4"
             android:gravity="center"
            />
-            <ImageView
-                android:id="@+id/up_cls"
-                android:src="@drawable/clos"
-                android:layout_marginLeft="10dp"
-                android:layout_width="35dp"
-                android:layout_height="35dp" />
+
         </LinearLayout>
         <android.support.design.widget.TextInputLayout
 
