--- a/app/src/main/res/layout/activity_admin_doctor.xml
+++ b/app/src/main/res/layout/activity_admin_doctor.xml
@@ -39,8 +39,9 @@
                 android:layout_height="25dp" />
             <EditText
                 android:textColor="@color/colorPrimary"
-                android:hint="Search"
+                android:hint="Float button la ditials acti. chi link dili"
                 android:textColorHint="#9c9b9b"
+
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
