--- a/app/src/main/res/layout/content_ad__dr_ditails.xml
+++ b/app/src/main/res/layout/content_ad__dr_ditails.xml
@@ -45,6 +45,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/doctor_name"
                     android:gravity="center"
                     android:textColor="#fff"
                     android:layout_width="230dp"
@@ -61,6 +62,7 @@
                     android:background="#fff"></LinearLayout>
 
                 <TextView
+                    android:id="@+id/doctor_id"
                     android:gravity="center"
                     android:textColor="#fff"
                     android:layout_width="230dp"
@@ -97,6 +99,7 @@
                     android:layout_marginTop="22dp"
                     android:layout_marginLeft="5dp"/>
                 <TextView
+                    android:id="@+id/doctor_phno"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ph no"
@@ -118,6 +121,7 @@
                      android:layout_marginTop="22dp"
                      android:layout_marginLeft="5dp"/>
                  <TextView
+                     android:id="@+id/doctor_email"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="email o"
@@ -139,6 +143,7 @@
                      android:layout_marginTop="22dp"
                      android:layout_marginLeft="5dp"/>
                  <TextView
+                     android:id="@+id/doctor_address"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Address o"
@@ -162,6 +167,7 @@
                      android:layout_marginTop="22dp"
                      android:layout_marginLeft="5dp"/>
                  <TextView
+                     android:id="@+id/doctor_dob"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="dob o"
@@ -183,6 +189,7 @@
                      android:layout_marginTop="22dp"
                      android:layout_marginLeft="5dp"/>
                  <TextView
+                     android:id="@+id/doctor_blood"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="blood o"
@@ -199,7 +206,7 @@
 
     <ScrollView
         android:id="@+id/up_sc"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:overScrollMode="always"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
