--- a/app/src/main/res/layout/lay_admin_doctor.xml
+++ b/app/src/main/res/layout/lay_admin_doctor.xml
@@ -53,6 +53,36 @@
                         android:textSize="15dp"
                         android:text=" city"/>
 
+                    <TextView
+                        android:id="@+id/nfc_id"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp" />
+
+                    <TextView
+                        android:id="@+id/phno"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp" />
+
+                    <TextView
+                        android:id="@+id/email"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp" />
+                    <TextView
+                        android:id="@+id/address"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp" />
+
+                    <TextView
+                        android:id="@+id/dob"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp" />
+                    <TextView
+                        android:id="@+id/blood"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp" />
+
+
+
                 </LinearLayout>
 
                 <TextView
