--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -14,14 +14,14 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:id="@+id/login_password"
+            android:id="@+id/Password"
             android:inputType="textPassword"
             android:textSize="20dp"/>
         <Button
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Login"
-            android:id="@+id/login_button"
+            android:id="@+id/PasswordB"
             android:layout_marginTop="30dp"/>
     </LinearLayout>
 </android.widget.RelativeLayout>
