--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical"
         android:gravity="center">
         <EditText
+            android:text="12345678"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Password"
