--- a/app/src/main/res/layout/content_ad__dr_ditails.xml
+++ b/app/src/main/res/layout/content_ad__dr_ditails.xml
@@ -206,7 +206,7 @@
 
     <ScrollView
         android:id="@+id/up_sc"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:overScrollMode="always"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
