--- a/app/src/main/res/layout/content_admin_.xml
+++ b/app/src/main/res/layout/content_admin_.xml
@@ -5,9 +5,9 @@
     android:id="@+id/content_admin_"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="2dp"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.aj.mtrs.Admin_Activity"
